# mochi

./: .drone.yml  .editorconfig  Cargo.toml  README.md  build.rs
compiler/: Cargo.toml
compiler/src/: main.rs
examples/: fib.mo  fizzbuzz.mo  hello.mo  math.mo  struct.mo
interpreter/: Cargo.toml
interpreter/src/: main.rs
src/: ast.rs  codegen.rs  env.rs  errors.rs  ir.rs  lib.rs  main.rs  mir.rs  parser.lalrpop  prelude.rs  regex_ext.rs  scanner.rs  tast.rs  typeck.rs  types.rs
std/: data.mo
typesystem/: ast.ml  dune  env.ml  examples.ml  typed_ast.ml
