[package]
name = "mochi"
version = "0.1.0"
authors = ["Michael Zhang <iptq@protonmail.com>"]
edition = "2018"
build = "build.rs"

[workspace]
members = ["compiler", "interpreter"]

[build-dependencies]
lalrpop = "0.16"

[dependencies]
backtrace = "0.3"
codespan = "0.2"
codespan-reporting = "0.2"
fnv = "1.0"
lalrpop-util = "0.16"
lazy_static = "1.0"
regex = "1.0"
symbol = "0.1"

elfkit = { version = "0.0.6", optional = true }

[features]
default = ["codegen"]
codegen = ["elfkit"]
