[package]
name = "mochi"
version = "0.1.0"
authors = ["Michael Zhang <iptq@protonmail.com>"]
edition = "2018"

build = "build.rs"

[build-dependencies]
lalrpop = "0.16"

[dependencies]
cranelift = "0.30"
cranelift-faerie = "0.30"
cranelift-module = "0.30"
cranelift-native = "0.30"
lalrpop-util = "0.16"
lazy_static = "1.0"
regex = "1.0"
structopt = "0.2"
symbol = "0.1"
target-lexicon = "0.3"
